--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {
 	background-color:  black;
 }
 
-.header, 
-.footer {
+.header {
 	background-color: #fad82f;
 	padding: 1px;
 	pading-left:1px;
